feat: pet model finished
